apps/overpass/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: overpass-api
    app.kubernetes.io/name: overpass-api
    app.kubernetes.io/version: 0.7.62
  annotations:
    kube-linter.io/ignore-all: "true"
  name: overpass-api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: overpass-api
      app.kubernetes.io/name: overpass-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: overpass-api
        app.kubernetes.io/name: overpass-api
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: OVERPASS_PLANET_PREPROCESS
          value: mv /db/planet.osm.bz2 /db/planet.osm.pbf && osmium cat -o /db/planet.osm.bz2
            /db/planet.osm.pbf && rm /db/planet.osm.pbf
        - name: OVERPASS_MODE
          value: init
        - name: OVERPASS_META
          value: "no"
        - name: OVERPASS_FASTCGI_PROCESSES
          value: "4"
        - name: OVERPASS_RATE_LIMIT
          value: "1024"
        - name: OVERPASS_TIME
          value: "1000"
        - name: OVERPASS_SPACE
          value: "8589934592"
        - name: OVERPASS_MAX_TIMEOUT
          value: "1000"
        - name: OVERPASS_UPDATE_SLEEP
          value: "3600"
        - name: OVERPASS_PLANET_URL
          value: https://download.geofabrik.de/europe/germany/nordrhein-westfalen/muenster-regbez-latest.osm.pbf
        - name: OVERPASS_DIFF_URL
          value: http://download.geofabrik.de/europe/germany/nordrhein-westfalen/muenster-regbez-updates
        - name: OVERPASS_USE_AREAS
          value: "true"
        - name: OVERPASS_STOP_AFTER_INIT
          value: "false"
        image: docker.io/wiktorn/overpass-api:0.7.62
        imagePullPolicy: IfNotPresent
        name: overpass-api
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /db
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: overpass-api-sa
      serviceAccountName: overpass-api-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: overpass-api-data
