apps/overpass/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: overpass-api
    app.kubernetes.io/name: overpass-api
    app.kubernetes.io/version: 0.7.62
  name: overpass-api
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: overpass-api
    app.kubernetes.io/name: overpass-api
  sessionAffinity: None
  type: ClusterIP
